--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8"/>
         <title>Google</title>
-        <link rel="stylesheet" href="http://Diogo1809.github.io/css/main.css" />
+        <link rel="stylesheet" href="https://Diogo1809.github.io/css/main.css" />
         <link rel="icon" type="icon/ico" href="http://Diogo1809.github.io/imagens/google.ico">
     </head>
 <body>	
