--- a/termos.html
+++ b/termos.html
@@ -1,16 +1,17 @@
 <!DOCTYPE html>
-<html>
+<html lang="pt-br">
 <head>
+<meta charset="utf-8">
 <title>Termos</title>
 </head>
 <body>
 
 <h1 style="text-align:center;">Termso de uso Godoog.tk</h1>
-<h3 style="text-align:center;"> Este site È um site sem fins lucrativos e de cÛdigo aberto (DisponÌvel no GitHub em: https://github.com/Diogo1809/Diogo1809.github.io).</h3>
-<p>Eu criei este site apenas com motivos educacionais, pois fiz um curso de HTML e queria testar o que aprendi l· criando um site.</br>
-O domÌnio deste site foi comprado no site http://www.freenom.com/pt/index.html .</br>
-Aceito patrocÌnio para ospedar meu site na Hostnet (ela È muito boa) ou na Godady.</br>
-As imagens foram retiradas do google imagens e o seu link original foi mantido, ele foi apenas encurtado para deixar o cÛdigo mais amig·vel.</br>
+<h3 style="text-align:center;"> Este site √© um site sem fins lucrativos e de c√≥digo aberto (Dispon√≠vel no GitHub em: https://github.com/Diogo1809/Diogo1809.github.io).</h3>
+<p>Eu criei este site apenas com motivos educacionais, pois fiz um curso de HTML e queria testar o que aprendi l√° criando um site.</br>
+O dom√≠nio deste site foi comprado no site http://www.freenom.com/pt/index.html .</br>
+Aceito patroc√≠nio para ospedar meu site na Hostnet (ela √© muito boa) ou na Godady.</br>
+As imagens foram retiradas do google imagens e o seu link original foi mantido, ele foi apenas encurtado para deixar o c√≥digo mais amig√°vel.</br>
 Obrigado por ler os termos de uso. Continue a aproveitar o Godoog.</br></p>
 <form method="get" action="https://goo.gl/forms/6TilBKfsNkpIfMKq2"><button type="submit">Fale conosco</button></form>
 
