--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
             <a href="https://goo.gl/xH9ejh" class="nav-bottom-a">
                 Privacidade
             </a>
-            <a href="https://goo.gl/akFzUL" class="nav-bottom-a">
+            <a href="https://Diogo1809.github.io/termos.html" class="nav-bottom-a">
                 Terms
             </a>
             <a href="https://goo.gl/2tzMLv" class="nav-bottom-a">
