--- a/curso-em-video.html
+++ b/curso-em-video.html
@@ -3,32 +3,32 @@
     <head>
         <meta charset="utf-8"/>
         <title>Google</title>
-        <link rel="stylesheet" href="C:\Users\diogo\Desktop\Diogo1809.github.io\cev" />
+        <link rel="stylesheet" href="https://Diogo1809.github.io/cev/main.css" />
         <link rel="icon" type="icon/ico" href="http://Diogo1809.github.io/imagens/google.ico">
     </head>
 <body>	
 <div id="main">
     <div id="nav-top">
         <p id="name" class="twolinks">
-            Patamail
+            Alfredo
         </p>
-        <a href="https://goo.gl/YvhKPN" class="twolinks">
-            Cocô
+        <a href="https://www.cursoemvideo.com/" class="twolinks">
+            CEV
         </a>
-        <a href="https://goo.gl/TtnBsv" class="twolinks">
-            Images
+        <a href="https://apoie.me/cursoemvideo" class="twolinks">
+            Apoie-me
         </a>
 		<input type="button" id="ninedots" onclick="dogMusicas();">
         <div id="notif">
             <h1 id="notif_num">9</h1>
         </div>
         <div id="name-div">
-            <p>D</p>
+            <p>A</p>
         </div>
     </div>
     <div id="center-div">
         <img src="https://goo.gl/G6mmuQ" id="logo" />
-        <h1 id="cidade">Dog</h1>
+        <h1 id="cidade">Hardware</h1>
         <input type="search" id="searchbox" placeholder=" O que deseja pesquisar?"/>
         <input type="button" id="pesquisa" onclick="abreLink();">
         <script>
