--- a/curso-em-video.html
+++ b/curso-em-video.html
@@ -39,44 +39,44 @@
 	           window.open(final);	   
 		    }
 			function dogMusicas(){
-	           window.open("https://www.youtube.com/watch?v=0WdAQNl1H24");			   
+	           window.open("https://www.youtube.com/channel/UCrWvhVmt0Qac3HgsjQK62FQ");			   
 		    }
         </script>
-        <a href="https://goo.gl/bn2Tew"> <!-- Adicionar funções aos botões -->
+        <a href="https://www.youtube.com/watch?v=6SEF8PojTFg&list=PLHz_AreHm4dmvLwxb6w3SI3Y-B6FzZA_E"> <!-- Adicionar funções aos botões -->
             <div class="twobuttons" style="left: 200px;">
-                <p>Passa a pata</p>
+                <p>NHU!!</p>
             </div>
         </a>
-        <a href="https://goo.gl/SjdFT1">
+        <a href="https://www.youtube.com/watch?v=UmsDjLBvX0o">
             <div class="twobuttons" style="left: 355px;">
-                <p>Estou com Fome!</p>
+                <p>Tenho certificado?</p>
             </div>
         </a>
     </div>
     <div id="nav-bottom">
         <div id="nav-bottom-left">
-            <a href="https://goo.gl/x2Uoqe" class="nav-bottom-a">
+            <a href="https://Diogo1809.github.io/cev/imagens/Pratrocina eu.png" class="nav-bottom-a">
                 Publicidade
             </a>
-            <a href="https://goo.gl/zF36dH" class="nav-bottom-a">
-                Negócios
+            <a href="https://Diogo1809.github.io/cev/imagens/dialogo.png" class="nav-bottom-a">
+                Diálogo
             </a>
-            <a href="https://goo.gl/K2yUHv" class="nav-bottom-a">
-                Sob
+            <a href="https://Diogo1809.github.io/cev/imagens/Sob.png" class="nav-bottom-a">
+                Mais
             </a>
         </div>
         <div id="nav-bottom-right">
-            <a href="https://goo.gl/xH9ejh" class="nav-bottom-a">
-                Privacidade
+            <a href="https://Diogo1809.github.io/cev/imagens/PENDRIVE.png" class="nav-bottom-a">
+                Pen Drive
             </a>
-            <a href="https://goo.gl/akFzUL" class="nav-bottom-a">
+            <a href="https://Diogo1809.github.io/cev/termos.html" class="nav-bottom-a">
                 Terms
             </a>
-            <a href="https://goo.gl/2tzMLv" class="nav-bottom-a">
+            <a href="https://Diogo1809.github.io/cev/imagens/CONFIGURACOES.png" class="nav-bottom-a">
                 Configuações
             </a>
             <a href="" class="nav-bottom-a">
-                DS.com
+                :)	
             </a>
         </div>
     </div>
