--- a/dogcloud.html
+++ b/dogcloud.html
@@ -23,7 +23,7 @@
 				background-color: white;
 			}
         </style>
-		<link rel="icon" type="icon/ico" href="">
+		<link rel="icon" type="icon/ico" href="http://Diogo1809.github.io/imagens/DogCloud.ico">
 </head>
 <body background="http://Diogo1809.github.io/imagens/DogCloud.jpg">
 <h4 id="cop">By GoDoog Inc. ©</h4>
@@ -31,9 +31,5 @@
 <input type=image src="https://cdn.icon-icons.com/icons2/9/PNG/256/diskette_save_saveas_1514.png" width="70" height="70"> 
  
 </form>
-
-
-
-
 </body>
 </html>
