--- a/dogcloud.html
+++ b/dogcloud.html
@@ -23,7 +23,7 @@
 				background-color: white;
 			}
         </style>
-		<link rel="icon" type="icon/ico" href="">
+		<link rel="icon" type="icon/ico" href="http://godoog.tk/imagens/google.ico">
 </head>
 <body background="http://Diogo1809.github.io/imagens/DogCloud.jpg">
 <h4 id="cop">By GoDoog Inc. ©</h4>
