--- a/cloud.html
+++ b/cloud.html
@@ -1,39 +1,39 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
+	<!--id: +zU2pmSVGlp -->
 <meta charset="Utf-8">
 <title>☁💽DogCloud 🐕🖥</title>
 <style type="text/css">  
-			#btn1{
-				position: absolute;
-				background-image: url("http://godoog.tk/imagens/Disquete.png");
+		#btn1{
+				position: relative;
+				background-image: url("http://Diogo1809.github.io/imagens/Disquete.png");
 				background-size: 75px 75px;
 				background-color: transparent;
-				top: 850px;
-				left: 1800px;
+				top: 1px;
+				left: 5px;
 				width: 75px;
 				height: 75px;
 				border: 0px;
 			}
 			#btn2{
-				position: absolute;
-				background-image: url("http://godoog.tk/imagens/Transfer.png");
+				position: relative;
+				background-image: url("http://Diogo1809.github.io/imagens/Transfer.png");
 				background-size: 85px 80px;
 				background-color: transparent;
-				top: 840px;
-				left: 1615px;
+				top: 1px;
+				left: 5px;
 				width: 85px;
 				height: 80px;
 				border: 0px;
 			}
 			body {
 				background-image: url("http://Diogo1809.github.io/imagens/DogCloud.jpg") ;
-				background-repeat: no-repeat;
 				background-size: cover;
 			}
 			#cop{
-				position: absolute;
-                top: 800px; 
+				position: relative;
+                top: 5px; 
                 left: 10px; 
 				color: #00FF00;
 				background-color: none;
@@ -55,3 +55,4 @@
 <input type="button" id="btn2" onclick="Transfer();">
 </body>
 </html>
+<!--Feito por: godog.cloud@outlook.com-->
