--- a/cloud.html
+++ b/cloud.html
@@ -7,7 +7,7 @@
 <style type="text/css">  
 		#btn1{
 				position: relative;
-				background-image: url("http://Diogo1809.github.io/imagens/Disquete.png");
+				background-image: url("https://godoog.tk/imagens/Disquete.png");
 				background-size: 75px 75px;
 				background-color: transparent;
 				top: 1px;
@@ -18,7 +18,7 @@
 			}
 			#btn2{
 				position: relative;
-				background-image: url("http://Diogo1809.github.io/imagens/Transfer.png");
+				background-image: url("https://godoog.tk/imagens/Transfer.png");
 				background-size: 85px 80px;
 				background-color: transparent;
 				top: 1px;
@@ -28,7 +28,7 @@
 				border: 0px;
 			}
 			body {
-				background-image: url("http://Diogo1809.github.io/imagens/DogCloud.jpg") ;
+				background-image: url("https://godoog.tk/imagens/DogCloud.jpg") ;
 				background-size: cover;
 			}
 			#cop{
@@ -39,9 +39,9 @@
 				background-color: none;
 			}
         </style>
-		<link rel="icon" type="icon/ico" href="http://godoog.tk/imagens/google.ico">
+		<link rel="icon" type="icon/ico" href="https://godoog.tk/imagens/google.ico">
 </head>
-<body background="http://Diogo1809.github.io/imagens/DogCloud.jpg">
+<body background="https://godoog.tk/imagens/DogCloud.jpg">
 <h3 id="cop">By GoDoog Inc. ©</h3>
 <script>
             function Cloud(){
