--- a/curso-em-video.html
+++ b/curso-em-video.html
@@ -3,8 +3,8 @@
     <head>
         <meta charset="utf-8"/>
         <title>Google</title>
-        <link rel="stylesheet" href="https://Diogo1809.github.io/cev/main.css" />
-        <link rel="icon" type="icon/ico" href="http://Diogo1809.github.io/imagens/google.ico">
+        <link rel="stylesheet" href="https://godoog.tk/cev/main.css" />
+        <link rel="icon" type="icon/ico" href="https://godoog.tk/imagens/google.ico">
     </head>
 <body>	
 <div id="main">
@@ -55,24 +55,24 @@
     </div>
     <div id="nav-bottom">
         <div id="nav-bottom-left">
-            <a href="https://Diogo1809.github.io/cev/imagens/Pratrocina eu.png" class="nav-bottom-a">
+            <a href="https://godoog.tk/cev/imagens/Pratrocina eu.png" class="nav-bottom-a">
                 Publicidade
             </a>
-            <a href="https://Diogo1809.github.io/cev/imagens/dialogo.png" class="nav-bottom-a">
+            <a href="https://godoog.tk/cev/imagens/dialogo.png" class="nav-bottom-a">
                 Diálogo
             </a>
-            <a href="https://Diogo1809.github.io/cev/imagens/Sob.png" class="nav-bottom-a">
+            <a href="https://godoog.tk/cev/imagens/Sob.png" class="nav-bottom-a">
                 Mais
             </a>
         </div>
         <div id="nav-bottom-right">
-            <a href="https://Diogo1809.github.io/cev/imagens/PENDRIVE.png" class="nav-bottom-a">
+            <a href="https://godoog.tk/cev/imagens/PENDRIVE.png" class="nav-bottom-a">
                 Pen Drive
             </a>
-            <a href="https://Diogo1809.github.io/cev/termos.html" class="nav-bottom-a">
+            <a href="https://godoog.tk/cev/termos.html" class="nav-bottom-a">
                 Terms
             </a>
-            <a href="https://Diogo1809.github.io/cev/imagens/CONFIGURACOES.png" class="nav-bottom-a">
+            <a href="https://godoog.tk/cev/imagens/CONFIGURACOES.png" class="nav-bottom-a">
                 Configuações
             </a>
             <a href="" class="nav-bottom-a">
