--- a/dogcloud.html
+++ b/dogcloud.html
@@ -6,7 +6,7 @@
 <style type="text/css">  
 			#btn1{
 				position: absolute;
-				background-image: url("http://godoog.tk/imagens/Disquete.png");
+				background-image: url("https://godoog.tk/imagens/Disquete.png");
 				background-size: 75px 75px;
 				background-color: transparent;
 				top: 850px;
@@ -17,7 +17,7 @@
 			}
 			#btn2{
 				position: absolute;
-				background-image: url("http://godoog.tk/imagens/Transfer.png");
+				background-image: url("https://godoog.tk/imagens/Transfer.png");
 				background-size: 85px 80px;
 				background-color: transparent;
 				top: 840px;
@@ -27,7 +27,7 @@
 				border: 0px;
 			}
 			body {
-				background-image: url("http://Diogo1809.github.io/imagens/DogCloud.jpg") ;
+				background-image: url("https://godoog.tk/imagens/DogCloud.jpg") ;
 				background-repeat: no-repeat;
 				background-size: cover;
 			}
@@ -39,9 +39,9 @@
 				background-color: none;
 			}
         </style>
-		<link rel="icon" type="icon/ico" href="http://godoog.tk/imagens/google.ico">
+		<link rel="icon" type="icon/ico" href="https://godoog.tk/imagens/google.ico">
 </head>
-<body background="http://Diogo1809.github.io/imagens/DogCloud.jpg">
+<body background="https://godoog.tk/imagens/DogCloud.jpg">
 <h3 id="cop">By GoDoog Inc. ©</h3>
 <script>
             function Cloud(){
